learning_basilisk/couette_example/multiFluid/Couette_2Fluid_Gravity/slurm-1211035.out
qcc -autolink -O2 -Wall -fopenmp  -g -Wall -pipe -D_FORTIFY_SOURCE=2 -DDUMBGL -o multicouette/multicouette multicouette.c  -lm
In file included from /usr/include/stdint.h:25:0,
                 from /usr/lib/gcc/x86_64-redhat-linux/4.8.5/include/stdint.h:9,
                 from multicouette-cpp.c:6:
/usr/include/features.h:330:4: warning: #warning _FORTIFY_SOURCE requires compiling with optimization (-O) [-Wcpp]
 #  warning _FORTIFY_SOURCE requires compiling with optimization (-O)
    ^
multicouette.c: In function ‘acceleration_2’:
multicouette.c:95:33: error: expected identifier before ‘/’ token
     av.y[] -= sq(refVelocity)./(refLength*sq(Fr));
                                 ^
make: *** [multicouette.s] Error 1
make: *** [multicouette.s] Error 1
